# src/organization2/swagger/swagger.json
@@ -43,7 +43,7 @@
                 }
             }
         },
-        "/unit/get-all-member/{uid}": {
+        "/unit/all-member/{uid}": {
             "get": {
                 "tags": [
                     "unit"
@@ -68,6 +68,49 @@
                     },
                     "403": {
                         "description": "uid is empty"
+                    }
+                }
+            }
+        },
+        "/unit/member-by-page": {
+            "get": {
+                "tags": [
+                    "unit"
+                ],
+                "description": "get members page of Unit",
+                "operationId": "UnitController.get member  by page",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "unitId",
+                        "description": "parameter require",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "description": "parameter require",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "size",
+                        "description": "parameter require",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/members"
+                        }
+                    },
+                    "403": {
+                        "description": "unitId page size is empty"
                     }
                 }
             }
@@ -186,7 +229,7 @@
                 }
             }
         },
-        "/user/get-by-page": {
+        "/user/by-page": {
             "get": {
                 "tags": [
                     "user"
@@ -199,16 +242,14 @@
                         "name": "page",
                         "description": "parameter require",
                         "required": true,
-                        "type": "integer",
-                        "format": "int64"
+                        "type": "string"
                     },
                     {
                         "in": "query",
                         "name": "size",
                         "description": "parameter require",
                         "required": true,
-                        "type": "integer",
-                        "format": "int64"
+                        "type": "string"
                     },
                     {
                         "in": "query",
@@ -231,7 +272,7 @@
                 }
             }
         },
-        "/user/get-unit/{uid}": {
+        "/user/unit/{uid}": {
             "get": {
                 "tags": [
                     "user"
@@ -350,6 +391,10 @@
     "definitions": {
         "list-user": {
             "title": "list-user",
+            "type": "object"
+        },
+        "members": {
+            "title": "members",
             "type": "object"
         },
         "qlnv.Unit": {
